--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -32,6 +32,15 @@
         app:layout_constraintStart_toStartOf="@+id/namaTextView"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         tools:text="Cygnus olor" />
+    <TextView
+        android:id="@+id/jenisTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/namaTextView"
+        app:layout_constraintTop_toBottomOf="@+id/latinTextView"
+        tools:text="mamalia" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
